--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Hello World</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Khuzaima Yunus | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, World!</h1>
+  <header>
+    <h1 class="animate-text">Muhammad Khuzaima Yunus Khan</h1>
+    <p class="subtitle">Aspiring Data Scientist | AI Developer | ML Enthusiast</p>
+  </header>
+
+  <section class="about">
+    <h2>About Me</h2>
+    <p>Motivated and detail-oriented Data Science undergraduate at GIKI. Passionate about machine learning, AI, and data-driven solutions aimed at improving real-world problems.</p>
+  </section>
+
+  <section class="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Mindoria:</strong> AI-based mental health platform on Android/iOS with therapy & sentiment analysis.</li>
+      <li><strong>RAG Chatbot:</strong> HSE department chatbot using Retrieval-Augmented Generation.</li>
+      <li><strong>Sorting Visualizer:</strong> Visualized sorting algorithms using SFML in C++.</li>
+      <li><strong>Voice Cloner:</strong> Voice cloning from audio and text prompts.</li>
+      <li><strong>Big Data Analytics:</strong> AWS + Spark + Tableau for data visualization.</li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:kkhuzaimayunus@gmail.com">kkhuzaimayunus@gmail.com</a></p>
+    <p>Phone: +92 (334) 5712313</p>
+    <p>Location: Rahim Yar Khan, Punjab, Pakistan</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Khuzaima Yunus | <a href="Resume.pdf" download>Download Resume</a></p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
