--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Khuzaima Yunus | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Your Name • Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1 class="animate-text">Muhammad Khuzaima Yunus Khan</h1>
-    <p class="subtitle">Aspiring Data Scientist | AI Developer | ML Enthusiast</p>
-  </header>
+  <nav class="nav">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-  <section class="about">
+  <section id="home" class="hero">
+    <img src="assets/avatar.jpg" alt="Your Name">
+    <h1>Your Name</h1>
+    <p>Your tagline — something like "Data Scientist & ML Enthusiast"</p>
+    <div class="social">
+      <!-- Replace with your links -->
+      <a href="#"><img src="assets/icons/github.svg"></a>
+      <a href="#"><img src="assets/icons/linkedin.svg"></a>
+    </div>
+  </section>
+
+  <section id="about" class="about">
     <h2>About Me</h2>
-    <p>Motivated and detail-oriented Data Science undergraduate at GIKI. Passionate about machine learning, AI, and data-driven solutions aimed at improving real-world problems.</p>
+    <p>Write a short bio. Who you are, what you're passionate about, where you're located.</p>
   </section>
 
-  <section class="projects">
+  <section id="projects" class="projects">
     <h2>Projects</h2>
-    <ul>
-      <li><strong>Mindoria:</strong> AI-based mental health platform on Android/iOS with therapy & sentiment analysis.</li>
-      <li><strong>RAG Chatbot:</strong> HSE department chatbot using Retrieval-Augmented Generation.</li>
-      <li><strong>Sorting Visualizer:</strong> Visualized sorting algorithms using SFML in C++.</li>
-      <li><strong>Voice Cloner:</strong> Voice cloning from audio and text prompts.</li>
-      <li><strong>Big Data Analytics:</strong> AWS + Spark + Tableau for data visualization.</li>
-    </ul>
+    <div class="project-list">
+      <!-- copy this card for each project -->
+      <div class="project-card">
+        <h3>Project Title</h3>
+        <p>Short description of the project and tech used.</p>
+        <a href="#" class="btn">View Live</a>
+        <a href="#" class="btn">Source</a>
+      </div>
+      <!-- ... -->
+    </div>
   </section>
 
-  <section class="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:kkhuzaimayunus@gmail.com">kkhuzaimayunus@gmail.com</a></p>
-    <p>Phone: +92 (334) 5712313</p>
-    <p>Location: Rahim Yar Khan, Punjab, Pakistan</p>
+  <section id="contact" class="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+    <p>Location: Rahim Yar Khan, Pakistan</p>
   </section>
 
   <footer>
-    <p>© 2025 Khuzaima Yunus | <a href="Resume.pdf" download>Download Resume</a></p>
+    © 2025 Your Name — <a href="Resume.pdf" download>Resume</a>
   </footer>
 
   <script src="script.js"></script>
