Update stylesheet and script file references

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>PSER WhatsApp Bot Demo</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="card">
@@ -31,6 +31,6 @@
 <a class="link" href="/docs" target="_blank">Local API docs</a>
 </div>
 </div>
-<script src="app.js" defer></script>
+<script src="script.js" defer></script>
 </body>
 </html>
